[tool.poetry]
name = "pathfinder"
version = "0.1.0"
description = "Small app to experiment with pathfinding"
authors = ["Andrew <samysenko_a@mail.ru>"]
license = "Free"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pygame = "^2.1.0"
poetry = "^1.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
